--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
           java-version: 11
       - name: start docker db
         run: |
-          docker run --ulimit memlock=-1:-1 -it --rm=true --memory-swappiness=0 --name postgres-db -e POSTGRES_USER=app -e POSTGRES_PASSWORD=app -e POSTGRES_DB=db -p 5432:5432 postgres:12.4
+          docker run --ulimit memlock=-1:-1 --rm=true --memory-swappiness=0 --name postgres-db -e POSTGRES_USER=app -e POSTGRES_PASSWORD=app -e POSTGRES_DB=db -p 5432:5432 postgres:12.4
       - name: Build
         run: ./mvnw clean package -Dquarkus.package.type=uber-jar -B
       - name: install ssh key
